--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Create Executable
-        uses: Martin005/pyinstaller-action@v1.2.0
+        uses: sayyid5416/pyinstaller@v1.8.0
         with:
           python_ver: '3.12'
           spec: 'main.py'
